<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<ImageView
			android:id="@+id/details_fragment_cover"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:adjustViewBounds="true"
			android:contentDescription="@string/fragment_cover"
			android:scaleType="fitCenter"
			app:layout_constraintBottom_toTopOf="@+id/details_fragment_poster"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="1.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:srcCompat="@drawable/wide_pic" />
		
		<ImageView
			android:id="@+id/details_fragment_poster"
			android:layout_width="110dp"
			android:layout_height="160dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:contentDescription="@string/details_fragment_poster"
			android:scaleType="centerInside"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/details_fragment_cover"
			tools:srcCompat="@drawable/narrow_pic" />
		
		<TextView
			android:id="@+id/details_fragment_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			tools:text="@string/avengers_title"
			android:textAlignment="viewStart"
			android:textColor="@color/colorPrimary"
			android:textStyle="bold"
			app:layout_constraintStart_toEndOf="@+id/details_fragment_poster"
			app:layout_constraintTop_toBottomOf="@+id/details_fragment_cover" />
		
		<TextView
			android:id="@+id/details_fragment_release"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:text="@string/released"
			android:textAlignment="viewStart"
			android:textColor="@android:color/black"
			android:textStyle="bold"
			app:layout_constraintStart_toEndOf="@+id/details_fragment_poster"
			app:layout_constraintTop_toBottomOf="@+id/details_fragment_title" />
		
		<TextView
			android:id="@+id/details_fragment_release_date"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			tools:text="@string/date"
			app:layout_constraintStart_toEndOf="@+id/details_fragment_release"
			app:layout_constraintTop_toBottomOf="@+id/details_fragment_title" />
		
		<Button
			android:id="@+id/details_fragment_trailer_btn"
			style="@android:style/Widget.Button"
			android:layout_width="120dp"
			android:layout_height="40dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:clickable="true"
			android:text="@string/movie_trailer"
			android:textAlignment="center"
			android:textStyle="bold"
			app:layout_constraintStart_toEndOf="@+id/details_fragment_poster"
			app:layout_constraintTop_toBottomOf="@+id/details_fragment_release" />
		
		<TextView
			android:id="@+id/details_fragment_overview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:text="@string/overview"
			android:textAlignment="viewStart"
			android:textColor="@android:color/black"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/details_fragment_poster" />
		
		<TextView
			android:id="@+id/details_fragment_overview_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="8dp"
			android:isScrollContainer="false"
			tools:text="@string/avengers_movie_description"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/details_fragment_overview" />
	
	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>