<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	tools:context=".avengers_movie.MovieActivity">

    <ImageView
        android:id="@+id/main_pic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:layout_weight="1"
        android:contentDescription="@string/main_picture"
        android:scaleType="centerCrop"
        android:src="@drawable/wide_pic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/sec_pic"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/secondary_picture"
                    android:scaleType="centerInside"
                    android:src="@drawable/narrow_pic" />

                <RelativeLayout
                    android:id="@+id/details_group"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="6dp">

                    <TextView
                        android:id="@+id/movie_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="@string/avengers_title"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/release_date_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/movie_name_text"
                        android:padding="6dp"
                        android:text="@string/released"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/release_date_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/trailer_button"
                        android:layout_below="@id/movie_name_text"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="6sp"
                        android:layout_toEndOf="@+id/release_date_title_text"
                        android:padding="6dp"
                        android:text="@string/date"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/trailer_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/release_date_title_text"
                        android:layout_alignParentBottom="false"
                        android:text="@string/movie_trailer"
                        android:textAlignment="center"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="6dp"
                android:paddingTop="12dp">

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/overview"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/avengers_movie_description"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>