<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/li_movie_height"
    android:addStatesFromChildren="false"
    android:alwaysDrawnWithCache="false"
    android:animationCache="false"
    android:paddingTop="3dp">
    
    <ImageView
        android:id="@+id/item_movie_iv"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/movie_item_picture"
        android:src="@drawable/narrow_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/narrow_pic"
        tools:src="@drawable/narrow_pic" />
    
    <TextView
        android:id="@+id/item_movie_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avengers_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/item_movie_tv_overview"
        app:layout_constraintStart_toEndOf="@id/item_movie_iv" />
    
    <TextView
        android:id="@+id/item_movie_tv_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:longClickable="false"
        android:text="@string/avengers_movie_description"
        android:textAlignment="textStart"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_movie_iv"
        app:layout_constraintTop_toBottomOf="@id/item_movie_tv_title" />
</androidx.constraintlayout.widget.ConstraintLayout>